# ShortestOddPath

./: Cargo.toml  README.md  criterion.toml
benches/: bench_dijkstra.rs  bench_network_diversion.rs  bench_odd_path.rs  bench_odd_walk.rs  odd_path.rs  odd_walk.rs
benches/scripts/: bench_delaunay.py  bench_delaunay_diversions.py  bench_delaunay_paths.py  bench_delaunay_walks.py  plot_delaunay.py  plot_delaunay_diversions.py  plot_delaunay_paths.py  plot_delaunay_walks.py
benches/utility/: mod.rs
data/: fix_graph.py  generate_delaunay_graph.py  reformat_graphs.py  visualize_diversion.py  visualizer.py
data/large_graphs/: large1.in  large1_path.ans  large2.in
data/medium_graphs/: medium1.in  medium1_path.ans  medium2.in  medium2_path.ans  medium4.in  medium5.in  medium6.in  medium_path.ans
data/real_graphs/: COX2.mtx  CaliforniaRoadNetwork.in  CityOfOldenburg.in  CityOfSanJoaquinCounty.in  NorthAmericaRoadNetwork.in  fb-pages-government.mtx  power-1138-bus.mtx  power-494-bus.mtx  power-bcspwr09.mtx  power-bcspwr10.mtx
data/small_graphs/: small1_path.ans  small2.in
src/: lib.rs  main.rs
src/algorithm/: algorithm.rs  bottleneck_path.rs  mod.rs  network_diversion.rs  odd_path.rs  odd_walk.rs  shortest_bottleneck_path.rs  shortest_odd_path.rs  shortest_path.rs  two_disjoint_paths.rs  utility.rs
src/structure/: base.rs  cost.rs  edge.rs  graph.rs  mod.rs  (+5 more)
tests/: test_bottleneck_path.rs  test_disjoint_paths.rs  test_network_diversion.rs  test_odd_path.rs  test_odd_walk.rs  test_shortest_bottleneck_path.rs  test_shortest_odd_path.rs  test_shortest_odd_walk.rs
(+1006 files in other folders)
