[package]
name = "shortest_odd_path"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.5.1"
libm = "0.2.8"
queues = "1.1.0"
num = "0.4.1"

[[bench]]
name = "bench_odd_walk"
harness = false

[[bench]]
name = "bench_odd_path"
harness = false
