[package]
name = "shortest_odd_path"
version = "1.0.0"
edition = "2021"
rust-version = "1.79"
readme = "README.md"
authors = ["Steinar Simonnes <steinar.simonnes@gmail.com>"]
repository = "https://github.com/SteinarSi/ShortestOddPath.git"
keywords = ["algorithm", "odd", "path", "network", "diversion"]

[dependencies]
libm = "0.2.8"
queues = "1.1.0"
num = "0.4.1"
